force-app/main/default/objects/SubscriberSubscription__c/fields/BillingContractId__c.field-meta.xml
<CustomField>
    <fullName>BillingContractId__c</fullName>
    <description>Billing/contract reference.</description>
    <label>Billing Contract Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>