force-app/main/default/objects/SubscriberSubscription__c/fields/BillingCustomerId__c.field-meta.xml
<CustomField>
    <fullName>BillingCustomerId__c</fullName>
    <description>Billing platform customer ID.</description>
    <label>Billing Customer Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>