force-app/main/default/objects/SubscriberSubscription__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Subscription End.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>