force-app/main/default/objects/SubscriberSubscription__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Current plan</description>
    <label>Subscription Plan</label>
    <referenceTo>SubscriptionPlan__c</referenceTo>
    <relationshipLabel>Subscriber Subscriptions</relationshipLabel>
    <relationshipName>Subscriber_Subscriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>