force-app/main/default/objects/SubscriberSubscription__c/fields/SeatsUsed__c.field-meta.xml
<CustomField>
    <fullName>SeatsUsed__c</fullName>
    <description>Assigned/active seats.</description>
    <label>Seats Used</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>